--- a/_notes/💕💕완료된 글👌👌/익숙함에서 새로움을 찾아내자.md
+++ b/_notes/💕💕완료된 글👌👌/익숙함에서 새로움을 찾아내자.md
@@ -1,6 +1,5 @@
 ---
-dg-home : true
-dg-publish : true
+title : first
 ---
 
 요즘 책을 읽다보면 자신이 잘 알고 있는 분야의 지식을 활용하여 새로운 것을 찾아 내는 사람들의 이야기를 많이 읽게 됩니다. 무에서 유를 창조해 내는 것은 정말 어려운 일이죠. 하지만 내가 가지고 있던 지식을 활용한다면 훨씬 쉽게 새로운 것을 만들어 낼 수 있을 것입니다.
